--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,124 @@
 
 @import url(reset.css);
 
-.search{
-  background: url(../images/검색아이콘.png) no-repeat;
+body{
+  max-width: 1920px;
+  margin: 0 auto;
+}
+header{
+  width: 100%;
+}
+header .tmenuwrap{
+  width: 100%;
+  background-color: #f9f9f9;
+}
+header .tmenu{
+  margin: 0px auto;
+  max-width: 1300px;
+  height: 38px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+header .tmenu .login{
+  display: flex;
+}
+header .tmenu .login li{
+  margin-right: 20px;
+}
+header .tmenu .login li a{
+  display: inline-block;
+  font-size: 12px;
+  color: #888;
+  line-height: 38px;
+}
+header .tmenu #lang{
+  height: 22px;
+  font-size: 12px;
+  border: 1px solid #ccc;
+  margin-left: 10px;
+}
+header .menu{
+  margin: 0px auto;
+  max-width: 1300px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+header .logo{
+  width: 145px;
+}
+header .logo img{
+  width: 100%;
+}
+header .menu .gnb{
+  display: flex;
+  flex-wrap: wrap;
+}
+header .menu .gnb li{
+  margin-right: 56px;
+  font-size: 18px;
+  font-weight: bold;
+}
+header .menu .gnb li:last-child{
+  margin-right: 0px;
+}
+header .menu .gnb_icon{
+  display: flex;
+  margin-left: 18px;
+}
+header .menu .gnb_icon a{
+  margin-left: 18px;
   width: 25px;
   height: 25px;
   display: block;
 }
-.basket{
+header .menu .gnb_icon .search{
+  background: url(../images/검색아이콘.png) no-repeat;
+}
+header .menu .gnb_icon .basket{
   background: url(../images/장바구니아이콘.png) no-repeat;
-  width: 25px;
-  height: 25px;
-  display: block;
+}
+
+#content1{
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+}
+#content1 .slide{
+  display: flex;
+  position: relative;
+}
+#content1 .slide li{
+	flex-shrink: 0;
+	flex-basis: 100%;
+}
+#content1 .slide li img{
+  width: 100%;
+  height: 100%;
+}
+#content1 .abtn{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 84px;
+  height: 81px;
+  cursor: pointer;
+}
+#content1 .prev{
+  background: url(../images/왼쪽버튼.png);
+  left: 80px;
+}
+#content1 .next{
+  background: url(../images/오른쪽버튼.png);
+  right: 80px;
+}
+
+
+
+
+.coupban img{
+  width: 800px;
 }
