--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,9 @@ header .tmenu .login{
 header .tmenu .login li{
   margin-right: 20px;
 }
+header .tmenu .login li a:hover{
+  text-decoration: underline;
+}
 header .tmenu .login li a{
   display: inline-block;
   font-size: 12px;
@@ -81,6 +84,17 @@ header .menu .gnb_icon .search{
 header .menu .gnb_icon .basket{
   background: url(../images/장바구니아이콘.png) no-repeat;
 }
+header .smenuwrap{
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  background-color: red;
+  z-index: 3;
+}
+header .smenuwrap .smenu{
+  margin: 0px auto;
+  max-width: 1300px;
+}
 
 #content1{
   position: relative;
@@ -107,10 +121,10 @@ header .menu .gnb_icon .basket{
   top: 30%;
 }
 #content1 .slick-prev{
-  left: 0;
+  left: 100px;
 }
 #content1 .slick-next{
-  right: 0;
+  right: 100px;
 }
 #content1 .mainslide .slick-dots{
   top: -20px;
