--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ header .menu{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #ddd;
 }
 header .logo{
   width: 145px;
@@ -87,13 +88,17 @@ header .menu .gnb_icon .basket{
 header .smenuwrap{
   position: absolute;
   width: 100%;
-  height: 100px;
-  background-color: red;
+
+  background-color: #fff;
   z-index: 3;
 }
 header .smenuwrap .smenu{
   margin: 0px auto;
   max-width: 1300px;
+  display: flex;
+}
+header .smenuwrap .smenu .gnb_2depth_wrap{
+  display: flex;
 }
 
 #content1{
