--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,10 @@ header .tmenu #lang{
   border: 1px solid #ccc;
   margin-left: 10px;
 }
+header .menuwrap{
+  width: 100%;
+  border-bottom: 1px solid #ddd;
+}
 header .menu{
   margin: 0px auto;
   max-width: 1300px;
@@ -49,7 +53,6 @@ header .menu{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #ddd;
 }
 header .logo{
   width: 145px;
@@ -61,17 +64,29 @@ header .menu .gnb{
   display: flex;
   flex-wrap: wrap;
 }
-header .menu .gnb li{
-  margin-right: 56px;
+header .menu .gnb>li{
+  margin-right: 70px;
   font-size: 18px;
   font-weight: bold;
 }
-header .menu .gnb li:last-child{
+header .menu .gnb>li:last-child{
   margin-right: 0px;
+}
+header .menu .gnb li .gnb_2depth{
+  position: absolute;
+  font-weight: normal;
+  margin-top: 65px;
+  z-index: 4;
+}
+header .menu .gnb li .gnb_2depth li{
+  font-size: 13px;
+  padding-bottom: 20px;
+}
+header .menu .gnb li .gnb_2depth .gnb_3depth{
+  display: none;
 }
 header .menu .gnb_icon{
   display: flex;
-  margin-left: 18px;
 }
 header .menu .gnb_icon a{
   margin-left: 18px;
@@ -88,17 +103,23 @@ header .menu .gnb_icon .basket{
 header .smenuwrap{
   position: absolute;
   width: 100%;
-
+  height: 230px;
   background-color: #fff;
   z-index: 3;
+  padding: 24px 0 10px;
+  max-width: 1920px;
 }
 header .smenuwrap .smenu{
-  margin: 0px auto;
+  margin: 0 auto;
   max-width: 1300px;
-  display: flex;
 }
-header .smenuwrap .smenu .gnb_2depth_wrap{
-  display: flex;
+header .smenuwrap .smenu .img{
+  margin-right: 900px;
+  max-width: 340px;
+  min-width: 150px;
+}
+header .smenuwrap .smenu .img img{
+  width: 100%;
 }
 
 #content1{
