--- a/css/main.css
+++ b/css/main.css
@@ -54,10 +54,10 @@ header .menu{
   align-items: center;
   justify-content: space-between;
 }
-header .logo{
+header .menu .logo{
   width: 145px;
 }
-header .logo img{
+header .menu .logo img{
   width: 100%;
 }
 header .menu .gnb{
@@ -75,16 +75,60 @@ header .menu .gnb>li:last-child{
 header .menu .gnb li .gnb_2depth{
   position: absolute;
   font-weight: normal;
-  margin-top: 65px;
+  margin-top: 53px;
   z-index: 4;
 }
-header .menu .gnb li .gnb_2depth li{
-  font-size: 13px;
-  padding-bottom: 20px;
+header .menu .gnb li .gnb_2depth li:hover{
+  font-weight: bold;
 }
-header .menu .gnb li .gnb_2depth .gnb_3depth{
+
+
+header .menu .gnb li .gnb_2depth:not(.gnb_first){
   display: none;
 }
+
+
+header .menu .gnb li .gnb_2depth li{
+  font-size: 13px;
+  padding: 13px 0;
+}
+header .menu .gnb li .gnb_2depth li a::before{
+  content: '';
+  display: inline-block;
+  background-color: #fdb812;
+  height: 10px;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+  margin-top: 7px;
+}
+header .menu .gnb li .gnb_2depth li .gnb_3depth{
+  display: none;
+  top: -11px;
+  margin-left: 80px;
+  position: absolute;
+  height: 90%;
+  padding-top: 10px;
+  padding-bottom: 38px;
+  width: 870px;
+  padding-left: 20px;
+  background-color: green;
+  align-content: flex-start;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+header .menu .gnb li .gnb_2depth li:nth-child(4) .gnb_3depth{
+  /* display: flex; */
+}
+/* header .menu .gnb li .gnb_2depth li:hover .gnb_3depth{
+  display: block;
+} */
+header .menu .gnb li .gnb_2depth li .gnb_3depth li{
+  display: inline-block;
+  width: 100px;
+  font-weight: normal
+}
+
 header .menu .gnb_icon{
   display: flex;
 }
@@ -103,7 +147,7 @@ header .menu .gnb_icon .basket{
 header .smenuwrap{
   position: absolute;
   width: 100%;
-  height: 230px;
+  height: 260px;
   background-color: #fff;
   z-index: 3;
   padding: 24px 0 10px;
